2010-01-15  Piotr Fusik  <fox@scene.pl>
* win32/gui.h, gsplayer/Makefile, gsplayer/gspasap.c, win32/Makefile,
  win32/gui.rc, win32/info_dlg.c, win32/info_dlg.h, win32/settings_dlg.c,
  win32/settings_dlg.h, win32/apollo/ASAP_Apollo.cpp,
  win32/foobar2000/foo_asap.cpp, win32/wasap/wasap.c, win32/wasap/wasap.h,
  win32/winamp/in_asap.c:
  split gui.h into info_dlg.h, settings_dlg.h and wasap.h

* win32/gui.c, win32/info_dlg.c, win32/settings_dlg.c, win32/Makefile,
  gsplayer/Makefile: split gui.c into info_dlg.c and settings_dlg.c

* win32/Makefile, INSTALL: updated foobar2000 SDK to 1.0


2010-01-14  Piotr Fusik  <fox@scene.pl>
* asap.c, chksap.pl: allow TYPE D SAPs with no PLAYER


2010-01-13  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c, win32/gui.rc, win32/gui.rc:
  added progress bar for writing WAV file


2010-01-09  Piotr Fusik  <fox@scene.pl>
* csharp/ASAP.ppcs: changed ASAP_State from public to internal

* asap.c, java/ASAP.ppjava, javascript/asap.ppjs:
  reduced number of #ifdefs in ASAP_Generate

* asap.c: fixed RMT time detection
  ("java.lang.ArrayIndexOutOfBoundsException: 15" on aurora_m.rmt)

* asap.c, anylang.h, ASAP.ppjava: Java now reads resources to byte arrays,
  which are then handled like in other languages

* asap.c, anylang.h, csharp/Makefile:
  use initialized byte arrays and not resources in C#

* java/ASAP.ppjava, java/ASAP2WAV.java, java/ASAPApplet.java,
  java/ASAPMIDlet.java: moved common code to readAndClose()


2010-01-06  Piotr Fusik  <fox@scene.pl>
* asap.c, anylang.h, csharp/ASAP.ppcs:
  unified SAP header parsing across programming languages


2009-12-30  Piotr Fusik  <fox@scene.pl>
* flash/ASAPPlayer.as: FlashVars with file and no song should play default
  and not first song

* win32/dshow/asap_dsf.cpp, win32/setup/asap.wxs:
  add file types to Windows Media Player "Open" dialog


2009-12-23  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: toggling "Loop" didn't enable the "Save" button